Change the product list name

--- a/product-catgories/Beavarge-Speacial.html
+++ b/product-catgories/Beavarge-Speacial.html
@@ -11,11 +11,11 @@
     <section class="product-category">
       <div class="category-nav">
         <button class="active">All</button>
-        <button>Sinks</button>
-        <button>Chimneys</button>
-        <button>Hobs</button>
-        <button>Microwaves</button>
-        <button>Ovens</button>
+        <button>Cofee Machines</button>
+        <button>Beavarage Machines</button>
+        <button>Milk Boiler</button>
+        <button>Hot Chocolate Dispenser</button>
+        <button>Water Chiller</button>
         <button>Accessories</button>
       </div>
 
