--- a/product-catgories/Cold-prep.html
+++ b/product-catgories/Cold-prep.html
@@ -11,12 +11,13 @@
     <section class="product-category">
       <div class="category-nav">
         <button class="active">All</button>
-        <button>Sinks</button>
-        <button>Chimneys</button>
-        <button>Hobs</button>
-        <button>Microwaves</button>
-        <button>Ovens</button>
-        <button>Accessories</button>
+        <button>Sugercan Machines</button>
+        <button>Fruite Juiser</button>
+        <button>Ice Creame Machines</button>
+        <button>Comercial Juiser</button>
+        <button>Comercial Blender</button>
+        <button>Water Cooler</button>
+        <button>Acessories</button>
       </div>
 
       <div class="product-grid">
