--- a/product-catgories/Food-making-tools.html
+++ b/product-catgories/Food-making-tools.html
@@ -11,11 +11,12 @@
     <section class="product-category">
       <div class="category-nav">
         <button class="active">All</button>
-        <button>Sinks</button>
-        <button>Chimneys</button>
-        <button>Hobs</button>
-        <button>Microwaves</button>
-        <button>Ovens</button>
+        <button>Spiral Cutter</button>
+        <button>Chilli Cutting Machine</button>
+        <button>Chopper Machine</button>
+        <button>Potato Slicer</button>
+        <button>Hamburger Presser</button>
+        <button>Fiber Glass Statues</button>
         <button>Accessories</button>
       </div>
 
