--- a/product-catgories/Baking-roasting.html
+++ b/product-catgories/Baking-roasting.html
@@ -11,11 +11,10 @@
     <section class="product-category">
       <div class="category-nav">
         <button class="active">All</button>
-        <button>Sinks</button>
-        <button>Chimneys</button>
-        <button>Hobs</button>
-        <button>Microwaves</button>
-        <button>Ovens</button>
+        <button>Bakery Oven</button>
+        <button>Pizza Oven</button>
+        <button>Convection Oven</button>
+        <button>Gas Hob</button>
         <button>Accessories</button>
       </div>
 
