--- a/product-catgories/Frying.html
+++ b/product-catgories/Frying.html
@@ -11,11 +11,11 @@
     <section class="product-category">
       <div class="category-nav">
         <button class="active">All</button>
-        <button>Sinks</button>
-        <button>Chimneys</button>
-        <button>Hobs</button>
-        <button>Microwaves</button>
-        <button>Ovens</button>
+        <button>Deep fryer</button>
+        <button>Air fryer</button>
+        <button>Frying Pan</button>
+        <button>Induction Fryer</button>
+        <button>Pressure Fryer</button>
         <button>Accessories</button>
       </div>
 
