--- a/product-catgories/eating-cooking.html
+++ b/product-catgories/eating-cooking.html
@@ -11,11 +11,11 @@
     <section class="product-category">
       <div class="category-nav">
         <button class="active">All</button>
-        <button>Sinks</button>
-        <button>Chimneys</button>
-        <button>Hobs</button>
-        <button>Microwaves</button>
-        <button>Ovens</button>
+        <button>Popcorm Machines</button>
+        <button>Crepe Machines</button>
+        <button>Waffel Maker</button>
+        <button>Sweetcorn Machine</button>
+        <button>Electric Kettle</button>
         <button>Accessories</button>
       </div>
 
