--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <section id="nav">
   <div class="modern-navbar">
     <div class="modern-logo">
-      <img src="img/logo.png" alt="Logo" class="logo-img">
+      <img src="img/Asset 1.png" alt="Logo" class="logo-img">
     </div>
     <button class="nav-toggle" aria-label="Toggle navigation">
       <span></span>
@@ -175,7 +175,7 @@
       <h2>Frying & Gril</h2>
       <p> Deep Fryer,Air Fryer,Frying Pan,Induction Fryer,Pressure Fryer</p>
     </a>
-    <a href="/product-catgories/Baking-roasting.html" class="baking-box">
+    <a href="/product-catgories/Baking-roasting.html" class="box sports">
       <h2>Baking & Roasting</h2>
       <p>Bakery oven,Pizza Oven</p>
     </a>
@@ -462,7 +462,7 @@
 <footer class="footer-section" id="footer">
   <div class="footer-container">
     <div class="footer-logo">
-      <img src="your-logo.png" alt="Dee Kitchen Logo">
+      <img src="img/Asset 1.png" alt="Dee Kitchen Logo">
     </div>
     <div class="footer-links">
       <div class="footer-column">
@@ -479,6 +479,8 @@
         <h3>Location</h3>
         <p>No.12, Anna Nagar, Salem<br>Tamil Nadu - 600040</p>
          <h3>Email</h3>
+         <p>varttaaoverseas@gmail.com</p>
+
       </div>
       <div class="footer-column">
         <h3>Contact Us</h3>
