modif nav prvie

--- a/index.html
+++ b/index.html
@@ -30,16 +30,64 @@
   <div class="nav-hover-group">
     <a href="#product-catagory-section" class="modern-nav-link">Product ></a>
     <div class="nav-hover-preview">
-      <strong>Featured Products</strong>
-      <ul>
-        <li><a href="/product-catgories/Frying-Grilling.html">Frying & Grilling</a></li>
-        <li><a href="/product-catgories/ice-cold.html">Ice & Cold Preparations</a>  </li>
-        <li><a href="/product-catgories/Baking-roasting.html">Baking & Roasting</a> </li>
-        <li><a href="/product-catgories/eating-cooking.html">Cooking & Eating</a> </li>
-        <li><a href="/product-catgories/Juise-Blending.html">Juice & Blending</a> </li>
-        <li><a href="/product-catgories/Beavarge-Speacial.html">Beavarage & Speacial</a> </li>
-      </ul>
-    </div>
+  <strong>Cold Preparations & Juice Maker</strong>
+  <ul>
+    <li>Sugarcane Machines</li>
+    <li>Fruit Juicer</li>
+    <li>IceCream Machine</li>
+    <li>Commercial Juicer</li>
+    <li>Orange Juicer</li>
+    <li>Commercial Blender</li>
+    <li>Water Cooler</li>
+  </ul>
+
+  <strong>Frying & Grill</strong>
+  <ul>
+    <li>Deep Fryer</li>
+    <li>Air Fryer</li>
+    <li>Frying Pan</li>
+    <li>Induction Fryer</li>
+    <li>Pressure Fryer</li>
+  </ul>
+
+  <strong>Baking & Roasting</strong>
+  <ul>
+    <li>Bakery Oven</li>
+    <li>Pizza Oven</li>
+  </ul>
+
+  <strong>Cooking & Eating</strong>
+  <ul>
+    <li>Popcorn Machines</li>
+    <li>Crepe Machine</li>
+    <li>Waffle Maker</li>
+    <li>Sweetcorn Machine</li>
+  </ul>
+
+  <strong>Food Making Tools</strong>
+  <ul>
+    <li>Spiral Cutter</li>
+    <li>Chilling Cutting Machine</li>
+    <li>Chopper Machine</li>
+    <li>Potato Slicer</li>
+    <li>Hamburger Presser</li>
+    <li>Fiber Glass Statues</li>
+  </ul>
+
+  <strong>Beverage & Special Use</strong>
+  <ul>
+    <li>Coffee Machine</li>
+    <li>Hot Beverage Machine</li>
+    <li>Milk Boiler</li>
+    <li>Hot Chocolate Dispenser</li>
+    <li>Water Chiller</li>
+  </ul>
+
+  <div class="nav-tagline">
+    <h2><span>Dee Kitchen</span><br>Making Waves Everywhere!</h2>
+  </div>
+</div>
+
   </div>
   <div class="nav-hover-group">
     <a href="#services" class="modern-nav-link">Service ></a>
@@ -59,7 +107,7 @@
   <a href="#work" class="modern-nav-link">Work</a>
 </nav>
     <div class="modern-actions">
-      <a href="#" class="modern-signup-btn">Enquiry</a>
+      <a href="https://wa.me/9042664066?text=Hi%20Bakero!%20I%20am%20interested%20in%20your%20products." class="modern-signup-btn">Enquiry</a>
       <a href="#footer" class="modern-signup-btn">Contact</a>
     </div>
   </div>
@@ -97,9 +145,10 @@
   </h1>
     <div class="intro">
       <p>
-        At <strong>DEE Kitchen</strong> , we specialize in providing high-quality, durable, and efficient commercial kitchen appliances that power restaurants, hotels, bakeries, and catering businesses across the country. With a focus on performance, safety, and innovation, we deliver reliable kitchen solutions that help food businesses thrive in fast-paced, demanding environments.
+        At <strong>Bakero</strong> , we specialize in providing high-quality, durable, and efficient commercial kitchen appliances that power restaurants, hotels, bakeries, and catering businesses across the country. With a focus on performance, safety, and innovation, we deliver reliable kitchen solutions that help food businesses thrive in fast-paced, demanding environments.
          </p>
-      <button class="cta-button">Talk to Us ↗</button>
+      <a href="//wa.me/9042664066?text=Hi%20Bakero!%20I%20am%20interested%20in%20your%20products."
+              title="WhatsApp" class="cta-button" >Talk to Us ↗</a>
     </div>
     <div class="about-images">
       <img src="/img/hero/img-4.webp" alt="Team at work">
@@ -468,35 +517,45 @@
       <div class="footer-column">
         <h3>Quick Links</h3>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Products</a></li>
-          <li><a href="#">Service</a></li>
-          <li><a href="#">Work</a></li>
+          <li><a href="#hero">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#product-catagory-section">Product</a></li>
+          <li><a href="#process">Process</a></li>
+          <li><a href="#services">Service</a></li>
+          <li><a href="#work">Work</a></li>
         </ul>
       </div>
       <div class="footer-column">
         <h3>Location</h3>
-        <p>No.12, Anna Nagar, Salem<br>Tamil Nadu - 600040</p>
+       <p>
+              <a href="https://maps.app.goo.gl/3Hk25aJDesNqW7JU6?g_st=aw"
+                ><i class="fas fa-map-marker-alt"></i> Door No. 163, at K.A, 4th
+                St, Indirani Nagar, S. Park Nagar, Narasothipatti, Salem, Tamil
+                Nadu 63 6004</a
+              >
+            </p>
          <h3>Email</h3>
-         <p>varttaaoverseas@gmail.com</p>
+         <a  href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=CllgCJqWggCsdHjBXprvXWRJVlZNXcwDGTMKsHqxbBsQdSZNkZmRNmJwjMwrFGCkcgNDgJxLBdV"
+          target="_blank"
+          rel="noopener"
+          title="Send Email to Bakero"><p>support@bakero.in</p></a>
 
       </div>
       <div class="footer-column">
         <h3>Contact Us</h3>
         <a href="#">HOW CAN WE HELP? →</a>
         <div class="social-icons">
-          <a href="#"><i class="fab fa-facebook"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-youtube"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="https://www.facebook.com/share/16m8VixqcL/"><i class="fab fa-facebook"></i></a>
+          <a href="https://www.instagram.com/deekitchengallery?utm_source=qr&igsh=NWFtM3ZiZGloazBk"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.instagram.com/deekitchengallery?utm_source=qr&igsh=NWFtM3ZiZGloazBk"><i class="fab fa-youtube"></i></a>
+          <a href="https://www.instagram.com/deekitchengallery?utm_source=qr&igsh=NWFtM3ZiZGloazBk"><i class="fab fa-twitter"></i></a>
           
         </div>
       </div>
     </div>
   </div>
   <div class="footer-bottom">
-    <p>Website Developed By <a  href="https://cosmic-agency.com/" target="_blank" rel="noopener" >THE COSMIC</a></p>
+    <p>© Copyright 2025. Bakero. All rights reserved.</p>
   </div>
 </footer>
 
