--- a/product-catgories/Cold-prep.html
+++ b/product-catgories/Cold-prep.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cold Preparations & Juice Maker</title>
     <link rel="stylesheet" href="../style.css" />
+
+    <style>
+      body {
+        padding: 1rem;
+       
+      }
+    </style>
   </head>
   <body>
     <h2 class="product-title">Cold Preparations & Juice Maker</h2>
@@ -84,9 +91,9 @@
           <h4>Heavy duty Ice creame machine</h4>
           <p>₹1,20,000</p>
         </div>
-        <div class="product-card" data-category="Hobs">
-          <img src="images/hob1.png" alt="Gas Hob" />
-          <h4>4 Burner Gas Hob</h4>
+        <div class="product-card" data-category="Sugercan Machines">
+          <img src="images/hob1.png" alt="Sugercan Machine" />
+          <h4>Sugercane Machines</h4>
           <p>₹14,499</p>
         </div>
         <div class="product-card" data-category="Chimneys">
