--- a/index.html
+++ b/index.html
@@ -30,63 +30,74 @@
   <div class="nav-hover-group">
     <a href="#product-catagory-section" class="modern-nav-link">Product ></a>
     <div class="nav-hover-preview">
-  <strong>Cold Preparations & Juice Maker</strong>
-  <ul>
-    <li>Sugarcane Machines</li>
-    <li>Fruit Juicer</li>
-    <li>IceCream Machine</li>
-    <li>Commercial Juicer</li>
-    <li>Orange Juicer</li>
-    <li>Commercial Blender</li>
-    <li>Water Cooler</li>
-  </ul>
-
-  <strong>Frying & Grill</strong>
-  <ul>
-    <li>Deep Fryer</li>
-    <li>Air Fryer</li>
-    <li>Frying Pan</li>
-    <li>Induction Fryer</li>
-    <li>Pressure Fryer</li>
-  </ul>
-
-  <strong>Baking & Roasting</strong>
-  <ul>
-    <li>Bakery Oven</li>
-    <li>Pizza Oven</li>
-  </ul>
-
-  <strong>Cooking & Eating</strong>
-  <ul>
-    <li>Popcorn Machines</li>
-    <li>Crepe Machine</li>
-    <li>Waffle Maker</li>
-    <li>Sweetcorn Machine</li>
-  </ul>
-
-  <strong>Food Making Tools</strong>
-  <ul>
-    <li>Spiral Cutter</li>
-    <li>Chilling Cutting Machine</li>
-    <li>Chopper Machine</li>
-    <li>Potato Slicer</li>
-    <li>Hamburger Presser</li>
-    <li>Fiber Glass Statues</li>
-  </ul>
-
-  <strong>Beverage & Special Use</strong>
-  <ul>
-    <li>Coffee Machine</li>
-    <li>Hot Beverage Machine</li>
-    <li>Milk Boiler</li>
-    <li>Hot Chocolate Dispenser</li>
-    <li>Water Chiller</li>
-  </ul>
-
-  <div class="nav-tagline">
-    <h2><span>Dee Kitchen</span><br>Making Waves Everywhere!</h2>
+  
+  <div>
+    <strong>Cold Preparations & Juice Maker</strong>
+    <ul>
+      <li><a href="#">Sugarcane Machines</a></li>
+      <li><a href="#">Fruit Juicer</a></li>
+      <li><a href="#">IceCream Machine</a></li>
+      <li><a href="#">Commercial Juicer</a></li>
+      <li><a href="#">Orange Juicer</a></li>
+      <li><a href="#">Commercial Blender</a></li>
+      <li><a href="#">Water Cooler</a></li>
+    </ul>
   </div>
+
+  <div>
+    <strong>Frying & Grill</strong>
+    <ul>
+      <li><a href="#">Deep Fryer</a></li>
+      <li><a href="#">Air Fryer</a></li>
+      <li><a href="#">Frying Pan</a></li>
+      <li><a href="#">Induction Fryer</a></li>
+      <li><a href="#">Pressure Fryer</a></li>
+    </ul>
+  </div>
+
+  <div>
+    <strong>Baking & Roasting</strong>
+    <ul>
+      <li><a href="#">Bakery Oven</a></li>
+      <li><a href="#">Pizza Oven</a></li>
+    </ul>
+  </div>
+
+  <div>
+    <strong>Cooking & Eating</strong>
+    <ul>
+      <li><a href="#">Popcorn Machines</a></li>
+      <li><a href="#">Crepe Machine</a></li>
+      <li><a href="#">Waffle Maker</a></li>
+      <li><a href="#">Sweetcorn Machine</a></li>
+    </ul>
+  </div>
+
+  <div>
+    <strong>Food Making Tools</strong>
+    <ul>
+      <li><a href="#">Spiral Cutter</a></li>
+      <li><a href="#">Chilling Cutting Machine</a></li>
+      <li><a href="#">Chopper Machine</a></li>
+      <li><a href="#">Potato Slicer</a></li>
+      <li><a href="#">Hamburger Presser</a></li>
+      <li><a href="#">Fiber Glass Statues</a></li>
+    </ul>
+  </div>
+
+  <div>
+    <strong>Beverage & Special Use</strong>
+    <ul>
+      <li><a href="#">Coffee Machine</a></li>
+      <li><a href="#">Hot Beverage Machine</a></li>
+      <li><a href="#">Milk Boiler</a></li>
+      <li><a href="#">Hot Chocolate Dispenser</a></li>
+      <li><a href="#">Water Chiller</a></li>
+    </ul>
+  </div>
+
 </div>
+
 
   </div>
   <div class="nav-hover-group">
@@ -147,8 +158,8 @@
       <p>
         At <strong>Bakero</strong> , we specialize in providing high-quality, durable, and efficient commercial kitchen appliances that power restaurants, hotels, bakeries, and catering businesses across the country. With a focus on performance, safety, and innovation, we deliver reliable kitchen solutions that help food businesses thrive in fast-paced, demanding environments.
          </p>
-      <a href="//wa.me/9042664066?text=Hi%20Bakero!%20I%20am%20interested%20in%20your%20products."
-              title="WhatsApp" class="cta-button" >Talk to Us ↗</a>
+      <a href="https://wa.me/9042664066?text=Hi%20Bakero!%20I%20am%20interested%20in%20your%20products."
+              title="WhatsApp" rel="noopener" class="cta-button" >Talk to Us ↗</a>
     </div>
     <div class="about-images">
       <img src="/img/hero/img-4.webp" alt="Team at work">
@@ -545,10 +556,11 @@
         <h3>Contact Us</h3>
         <a href="#">HOW CAN WE HELP? →</a>
         <div class="social-icons">
-          <a href="https://www.facebook.com/share/16m8VixqcL/"><i class="fab fa-facebook"></i></a>
-          <a href="https://www.instagram.com/deekitchengallery?utm_source=qr&igsh=NWFtM3ZiZGloazBk"><i class="fab fa-instagram"></i></a>
-          <a href="https://www.instagram.com/deekitchengallery?utm_source=qr&igsh=NWFtM3ZiZGloazBk"><i class="fab fa-youtube"></i></a>
-          <a href="https://www.instagram.com/deekitchengallery?utm_source=qr&igsh=NWFtM3ZiZGloazBk"><i class="fab fa-twitter"></i></a>
+          <a href="https://www.facebook.com/share/16m8VixqcL/" rel="noopener" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a>
+            <a href="https://wa.me/9042664066?text=Hi%20Bakero!%20I%20am%20interested%20in%20your%20products." rel="noopener" target="_blank" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+          <a href="https://www.instagram.com/deekitchengallery?utm_source=qr&igsh=NWFtM3ZiZGloazBk" title="Instagram"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.instagram.com/deekitchengallery?utm_source=qr&igsh=NWFtM3ZiZGloazBk" title="YouTube"><i class="fab fa-youtube"></i></a>
+          <a href="https://www.instagram.com/deekitchengallery?utm_source=qr&igsh=NWFtM3ZiZGloazBk" title="Twitter"><i class="fab fa-twitter"></i></a>
           
         </div>
       </div>
