--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KitchenPro Equipments</title>
+    <title>The Bakero</title>
+    <link rel="icon" href="img/logo FAINAL_page-0001.jpg">
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:400,600&display=swap"
       rel="stylesheet"
@@ -18,7 +19,15 @@
       rel="stylesheet"
       href="https://unpkg.com/lenis@1.3.8/dist/lenis.css"
     />
+     <style>
+    link img{
+      border-radius: 100%;
+      
+    }
+    
+  </style>
   </head>
+ 
 
   <body>
     <section id="nav">
