--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Bakero</title>
-    <link rel="icon" href="img/logo FAINAL_page-0001.jpg">
+    <link rel="icon" href="img/Asset 1.png">
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:400,600&display=swap"
       rel="stylesheet"
