--- a/index.html
+++ b/index.html
@@ -718,6 +718,7 @@
               title="Send Email to Bakero"
               ><p>support@bakero.in</p></a
             >
+            <a href="tel:9042664066" title="Call Us"><i class="fas fa-phone"></i> 9042664066</a>
           </div>
           <div class="footer-column">
             <h3>Contact Us</h3>
@@ -747,11 +748,7 @@
                 title="YouTube"
                 ><i class="fab fa-youtube"></i
               ></a>
-              <a
-                href="https://www.instagram.com/deekitchengallery?utm_source=qr&igsh=NWFtM3ZiZGloazBk"
-                title="Twitter"
-                ><i class="fab fa-twitter"></i
-              ></a>
+         
             </div>
           </div>
         </div>
